more phases in ak135 test, add header to txt files, line endings oh boy... create plots of difference vs dist