@@ -43,17 +43,7 @@ public class Dist180Test {
         straightThroughRay("prem");
     }
     
-    /** integrates the velocity model to obtain the travel time for a zero ray parameter ray
-     * through the center of the model and back to the surface. As the model is piecewise linear,
-     * and the ray parameter is zero and hence the path does not curve, we can obtain an 
-     * analytic solution as if the model was a flat stack of layers by using:
-     * t = time
-     * z = depth in layer
-     * d = layer thickness
-     * v = velocity, linearly interp a*z+b
-     * time = Int_0^d (1/v)
-     *      = Int_0^d (1/(a*z+b))
-     *      = 1/a * Math.log((a*d+b)/b)
+    /**
      *      
      * We test to be within 0.005 seconds on this PKIKP ray.
      * 
@@ -61,32 +51,68 @@ public class Dist180Test {
      * @throws TauModelException
      */
     public void straightThroughRay(String modelName) throws TauPException {
-        TimeTester time = new TimeTester(modelName);
-        time.setSourceDepth(0);
-        time.setPhaseNames(Collections.singletonList("PKIKP"));
-        List<Arrival> arrivals = time.calcAll(time.getSeismicPhases(), List.of(DistanceRay.ofDegrees(180)));
-        assertEquals(integrateVelocity(time.modelArgs.getTauModel().getVelocityModel()), arrivals.get(0).getTime(), 0.006);
+        TimeTester tool = new TimeTester(modelName);
+        tool.setSourceDepth(0);
+        VelocityModel vMod = tool.modelArgs.getTauModel().getVelocityModel();
+
+        tool.setPhaseNames(Collections.singletonList("PKIKP"));
+        List<Arrival> arrivals = tool.calcAll(tool.getSeismicPhases(), List.of(DistanceRay.ofDegrees(180)));
+        double[] layerTimes = integrateVelocity(tool.modelArgs.getTauModel().getVelocityModel());
+        double time_PIKIP = 0;
+        for (int i = 0; i < layerTimes.length; i++) {
+            time_PIKIP += 2 * layerTimes[i];
+        }
+        assertEquals(time_PIKIP, arrivals.get(0).getTime(), 0.0056, "PKIKP delta: " + (time_PIKIP - arrivals.get(0).getTime()));
+
+        // PcP
+        int cmb = vMod.layerNumberBelow(vMod.getCmbDepth());
+        double time_PcP = 0;
+        for (int i = 0; i < cmb; i++) {
+            time_PcP += 2 * layerTimes[i];
+        }
+        tool.setPhaseNames(Collections.singletonList("PcP"));
+        List<Arrival> PcP_arrivals = tool.calcAll(tool.getSeismicPhases(), List.of(DistanceRay.ofDegrees(0)));
+        Arrival PcP = PcP_arrivals.get(0);
+        assertEquals(time_PcP, PcP.getTime(), 0.002);
     }
+
     
-    /** integrates the velocity model, only works for a zero ray parameter ray. */
-    double integrateVelocity(VelocityModel vMod) {
+    /**
+     * integrates the velocity model to obtain the travel time for a zero ray parameter ray
+     *      * through the model  for each layer. As the model is piecewise linear,
+     *      * and the ray parameter is zero and hence the path does not curve, we can obtain an
+     *      * analytic solution as if the model was a flat stack of layers by using:
+     *      * t = time
+     *      * z = depth in layer
+     *      * d = layer thickness
+     *      * v = velocity, linearly interp a*z+b
+     *      * time = Int_0^d (1/v)
+     *      *      = Int_0^d (1/(a*z+b))
+     *      *      = 1/a * Math.log((a*d+b)/b)
+     *
+     * integrates the velocity model, only works for a zero ray parameter ray.
+     * @return one way travel time through each layer
+     * */
+    public static double[] integrateVelocity(VelocityModel vMod) {
         VelocityLayer[] layers = vMod.getLayers();
-        double time = 0;
+        double[] time = new double[layers.length];
+        System.err.println("Model: "+vMod.getModelName());
         for (int i = 0; i < layers.length; i++) {
             double t = layers[i].getThickness();
             if (t == 0) { continue; }
             double dvp = layers[i].getBotPVelocity()-layers[i].getTopPVelocity();
             if (dvp == 0) {
                 // const layer
-                time += t / layers[i].getTopPVelocity();
+                time[i] = t / layers[i].getTopPVelocity();
             } else {
                 // linear vel
                 
                 double a = dvp / t ;
                 double b = layers[i].getTopPVelocity();
-                time += 1/a * Math.log((a*t+b)/b);
+                time[i] = 1/a * Math.log((a*t+b)/b);
             }
+            System.err.println(i+" "+time[i]+" d: "+layers[i].getBotDepth());
         }
-        return time*2;
+        return time;
     }
 }
